oxiplate-derive/tests/broken/patterns/group-instead-of-tuple.stderr
error: Expected a pattern after "let"
 --> tests/broken/patterns/group-instead-of-tuple.rs:6:12
  |
6 | {%- if let (a) = (a,) -%}
  |            ^
